--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ style='word-wrap:break-word'>
 lang=EN-US>Journeys</span></p>
 
 <p class=MsoTitle align=center style='text-align:center'><span lang=EN-US><img
-width=686 height=163 id="Picture 12" src="index_files/image001.jpg"></span></p>
+width=800 height=163 id="Picture 12" src="index_files/heading.jpg"></span></p>
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>View of bear mountain state park from Smith Camp(Eleven Chen 2021)</span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
@@ -126,121 +127,31 @@ width=686 height=163 id="Picture 12" src="index_files/image001.jpg"></span></p>
 
 <div style='border:solid #F1CBF0 3.0pt;padding:0cm 0cm 0cm 0cm;background:#F1CBF0'>
 
-<h2><b><span lang=EN-US style='color:black'>A simple simulation for Manhattan
-traffic</span></b></h2>
 
+<h2><b><span lang=EN-US style='color:black'>A demonstration of parametric resonance</span></b></h2>
 </div>
 
-<p class=Text><span lang=EN-US>In this project, a simple traffic grid is built
-to mimic the traffic system at Manhattan in New York City. Manhattan has 214
-numbered streets and 11 numbered avenues. The streets go in the East-West
-direction while the avenues go from South-North. The directions here are all
-aligned with the Hudson River. In real Manhattan, some streets and avenues can
-go in both directions. To simplify the problem, only alternating direction one-way
-streets and avenues are considered. The motivation of this project is to have a
-descriptive model to the Manhattan traffic flow and some qualitative insights
-about the capacity of the grid system.</span></p>
+<p class=MsoNormal><span lang=EN-US>Course project of <a href="https://www.math.nyu.edu/~peskin/modsim_lecture_notes/index.html">MODELING AND SIMULATION IN SCIENCE, ENGINEERING, AND ECONOMICS</a> thaught by <a href="https://www.math.nyu.edu/~peskin/">Charles S. Peskin</a></span></p>
 
-<p class=Text align=center style='text-align:center'><span lang=EN-US><img
-width=307 height=229 id="figure_0.png" src="index_files/image002.gif">&nbsp;&nbsp;
-<img width=317 height=229 id="figure_5.png" src="index_files/image003.gif"><video width = 307 height=229 controls loop>
-	<source src="index_files/rate=0.300000.mp4" type="video/mp4">
-</video></span></p>
+<p class=Text><span lang=EN-US>In this project, we demonstrate the parametric resonance of a 2D elastic ring using the existing implementation of immersed boundary method. The ring is constructed using the zero-length Hookean springs, the ring is immersed in a square domain of fluid. This setup is analogous to a three-dimensional water balloon immersed in water. As for the dimension of the setup, the size of the square is 1 cm times 1 cm, the size of the fingernail. The boundary of the square is periodic, meaning that water flowing up out of the domain will flow into the domain in the bottom again. Similar for the left and right.</span></p>
+<p class=Text align=center style='text-align:center'>
+	<span lang=EN-US>
 
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Distribution of car number in
-the system with different incoming rate (first).</span></p>
-
-<p class=MsoCaption align=center style='text-align:center'> <span lang=EN-US> The limit of incoming rate
-when congestion occurs (second).</span></p>
-
-<p class=MsoCaption align=center style='text-align:center'> <span lang=EN-US> How cars move when incoming rate is relatively low (third).</span></p>
-
-<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
-page</span></b><span lang=EN-US>: <a
-href="https://github.com/Eleven7825/manhattan">Eleven7825/manhattan: A simple
-simulation for Manhattan traffic </a></span></p>
-
-<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report</span></b><span
-lang=EN-US>: <a
-href="./pdfs/manhattan.pdf"> here</a></span></p>
-
-<p class=Text><span lang=EN-US>&nbsp;</span></p>
-
-<div style='border:solid #F1CBF0 3.0pt;padding:0cm 0cm 0cm 0cm;background:#F1CBF0'>
-
-<h2><b><span lang=EN-US style='color:black'>Comparison Between
-Non-deterministic Model and Deterministic Model for Malaria and Sickle-Cell
-Hemoglobin Gene</span></b></h2>
-
-</div>
-
-<p class=Text><span lang=EN-US>In this project, I explore the long-term
-behavior of the Sickle-Cell gene and malaria. I first introduce the
-mathematical model and its implementation in MATLAB. The model has two
-versions-the deterministic version and the non-deterministic version. I find
-that with the default value for initial susceptible, infected and resistant,
-the deterministic model and the non-deterministic model have similar behavior
-while behave differently when the initial infected population is small.
-Moreover, as the infection rate of malaria gets larger, the ratio of resistant
-to malaria also gets larger as the result of natural selection.</span></p>
-
-<p class=Text align=center style='text-align:center'><span lang=EN-US><img
-border=0 width=324 height=274 id="figure_8.png" src="index_files/image004.gif">&nbsp;&nbsp;
-<img border=0 width=348 height=273 id="figure_13-2.png"
-src="index_files/image005.gif"></span></p>
-
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> As two diseases developed,
-the growth rate for the whole population settled into a stable value(first).</span></p>
-
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> The population of
-susceptible, infected, and resistant settle down to exponential growth(second).</span></p>
-
-<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
-page</span></b><span lang=EN-US>: <a
-href="https://github.com/Eleven7825/malaria-sickle-cell">https://github.com/Eleven7825/malaria-sickle-cell</a></span></p>
-
-<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report</span></b><span
-lang=EN-US>: <a href="./pdfs/malaria.pdf"> here</a></span></p>
-
-<p class=Text><span lang=EN-US>&nbsp;</span></p>
-
-<div style='border:solid #F1CBF0 3.0pt;padding:0cm 0cm 0cm 0cm;background:#F1CBF0'>
-
-<h2><b><span lang=EN-US style='color:black'>Simulated Fungi Decomposition
-System</span></b></h2>
-
-</div>
-
-<p class=MsoNormal><span lang=EN-US>with Xiaoyan Tang, Kris Chen</span></p>
-
-<p class=Text><span lang=EN-US>In order to incorporate the fluctuations of the
-environment into our model, we design the Environment Fungi Coefficient Abstraction
-(EFCA) to quantify the impact of PH, temperature, moisture and light intensity
-to the fungus communities. We set up the environment index to precisely
-determine the growth rate, death rate and decomposition rate of the specific
-fungus community. Based on biological knowledge and mathematical principles, we
-justify the functions we choose for the three rates are suitable through data
-fitting and error testing using MATLAB tool packages.</span></p>
-
-<p class=Text align=center style='text-align:center'><span lang=EN-US><img
-border=0 width=633 height=199 id=fungi.jpg src="index_files/image006.jpg"></span></p>
-
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Two different kinds of fungi
-compete to survive.</span></p>
-
-<p align=center style='text-align:center'>
-<video width="640" height="380" controls loop>
-  <source src="index_files/decompose.mp4" type="video/mp4">
+<video width = 300 height=300 controls loop>
+	<source src="index_files/8.mp4" type="video/mp4">
 </video>
+
+<video width = 300 height=300 controls loop>
+	<source src="index_files/k_const.mp4" type="video/mp4">
+</video>
+
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> The resonace case(left) and non resonace case(right).</span></p>
+
+</span>
 </p>
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Simulated processs for decomposition.</span></p>
-
-<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
-page:</span></b><span lang=EN-US> <a href="https://github.com/Eleven7825/fungi">Eleven7825/fungi:
-2021 mcm a </a></span></p>
-
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report:</span></b><span
-lang=EN-US> <a href="./pdfs/2112048.pdf"> here</a></span></p>
+lang=EN-US> <a href="./pdfs/A demonstration of parametric resonance.pdf"> here</a></span></p>
+
 
 <p class=Text><span lang=EN-US>&nbsp;</span></p>
 
@@ -248,8 +159,8 @@ lang=EN-US> <a href="./pdfs/2112048.pdf"> here</a></span></p>
 
 <h2><b><span lang=EN-US style='color:black'>Simulations on Adapted Thomson
 Problem with Different Frames</span></b></h2>
-
 </div>
+<p class=MsoNormal><span lang=EN-US>Course project of INTRO TO COMUPTER SIMULATION thaught by <a href="https://www.math.nyu.edu/~peskin/">Charles S. Peskin</a></span></p>
 
 <p class=Text><span lang=EN-US>Thomson's problem is determined the ground state
 of N electric charges on constrained in a sphere shell given the repelling
@@ -298,12 +209,144 @@ href="./pdfs/electron_problem _final.pdf"> here</a></span></p>
 
 <div style='border:solid #F1CBF0 3.0pt;padding:0cm 0cm 0cm 0cm;background:#F1CBF0'>
 
-<h2><b><span lang=EN-US style='color:black'>A Model to Predict the Maximum Car
-Speed in the Rain</span></b></h2>
+<h2><b><span lang=EN-US style='color:black'>An implementation of Backward Euler's method on spring system</span></b></h2>
+</div>
+<p class=MsoNormal><span lang=EN-US>Course project of <a href="https://www.math.nyu.edu/~peskin/modsim_lecture_notes/index.html">MODELING AND SIMULATION IN SCIENCE, ENGINEERING, AND ECONOMICS</a> thaught by <a href="https://www.math.nyu.edu/~peskin/">Charles S. Peskin</a></span></p>
+
+<p class=Text><span lang=EN-US>In this project, Backward Euler's method and Forward Euler's method have been implemented and compared in the simulation of the spring system. Forward Euler's method is easier to implement than Backward Euler's method. However, when the stiffness of the spring becomes larger, the method breaks down. Although the Backward Euler's method is harder to implement, it provides ultra stability which can deal with stiffer springs.
+</span></p>
+
+<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
+page:</span></b><span lang=EN-US> <a href="https://github.com/Eleven7825/Backward-Euler-Spring">here</a></span></p>
+
+<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report:</span></b><span
+lang=EN-US> <a href="./pdfs/backwar_euler.pdf"> here</a></span></p>
+
+<h2><b><span lang=EN-US style='color:black'>A simple simulation for Manhattan
+traffic</span></b></h2>
+</div>
+<p class=MsoNormal><span lang=EN-US>Course project of INTRO TO COMUPTER SIMULATION thaught by <a href="https://www.math.nyu.edu/~peskin/">Charles S. Peskin</a></span></p>
+
+<p class=Text><span lang=EN-US>In this project, a simple traffic grid is built
+to mimic the traffic system at Manhattan in New York City. Manhattan has 214
+numbered streets and 11 numbered avenues. The streets go in the East-West
+direction while the avenues go from South-North. The directions here are all
+aligned with the Hudson River. In real Manhattan, some streets and avenues can
+go in both directions. To simplify the problem, only alternating direction one-way
+streets and avenues are considered. The motivation of this project is to have a
+descriptive model to the Manhattan traffic flow and some qualitative insights
+about the capacity of the grid system.</span></p>
+
+<p class=Text align=center style='text-align:center'>
+	<span lang=EN-US><img
+width=307 height=229 id="figure_0.png" src="index_files/image002.gif">&nbsp;&nbsp;
+<img width=317 height=229 id="figure_5.png" src="index_files/image003.gif">
+<video width = 307 height=229 controls loop>
+	<source src="index_files/rate=0.300000.mp4" type="video/mp4">
+</video>
+</span>
+</p>
+
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Distribution of car number in
+the system with different incoming rate (first).</span></p>
+
+<p class=MsoCaption align=center style='text-align:center'> <span lang=EN-US> The limit of incoming rate
+when congestion occurs (second).</span></p>
+
+<p class=MsoCaption align=center style='text-align:center'> <span lang=EN-US> How cars move when incoming rate is relatively low (third).</span></p>
+
+<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
+page</span></b><span lang=EN-US>: <a
+href="https://github.com/Eleven7825/manhattan">Eleven7825/manhattan: A simple
+simulation for Manhattan traffic </a></span></p>
+
+<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report</span></b><span
+lang=EN-US>: <a
+href="./pdfs/manhattan.pdf"> here</a></span></p>
+
+<p class=Text><span lang=EN-US>&nbsp;</span></p>
+
+<div style='border:solid #F1CBF0 3.0pt;padding:0cm 0cm 0cm 0cm;background:#F1CBF0'>
+
+<h2><b><span lang=EN-US style='color:black'>Comparison Between
+Non-deterministic Model and Deterministic Model for Malaria and Sickle-Cell
+Hemoglobin Gene</span></b></h2>
+</div>
+<p class=MsoNormal><span lang=EN-US>Course project of INTRO TO COMUPTER SIMULATION thaught by <a href="https://www.math.nyu.edu/~peskin/">Charles S. Peskin</a></span></p>
+
+<p class=Text><span lang=EN-US>In this project, I explore the long-term
+behavior of the Sickle-Cell gene and malaria. I first introduce the
+mathematical model and its implementation in MATLAB. The model has two
+versions-the deterministic version and the non-deterministic version. I find
+that with the default value for initial susceptible, infected and resistant,
+the deterministic model and the non-deterministic model have similar behavior
+while behave differently when the initial infected population is small.
+Moreover, as the infection rate of malaria gets larger, the ratio of resistant
+to malaria also gets larger as the result of natural selection.</span></p>
+
+<p class=Text align=center style='text-align:center'><span lang=EN-US><img
+border=0 width=324 height=274 id="figure_8.png" src="index_files/image004.gif">&nbsp;&nbsp;
+<img border=0 width=348 height=273 id="figure_13-2.png"
+src="index_files/image005.gif"></span></p>
+
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> As two diseases developed,
+the growth rate for the whole population settled into a stable value(first).</span></p>
+
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> The population of
+susceptible, infected, and resistant settle down to exponential growth(second).</span></p>
+
+<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
+page</span></b><span lang=EN-US>: <a
+href="https://github.com/Eleven7825/malaria-sickle-cell">https://github.com/Eleven7825/malaria-sickle-cell</a></span></p>
+
+<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report</span></b><span
+lang=EN-US>: <a href="./pdfs/malaria.pdf"> here</a></span></p>
+
+<p class=Text><span lang=EN-US>&nbsp;</span></p>
+
+<div style='border:solid #F1CBF0 3.0pt;padding:0cm 0cm 0cm 0cm;background:#F1CBF0'>
+
+<h2><b><span lang=EN-US style='color:black'>Simulated Fungi Decomposition
+System</span></b></h2>
 
 </div>
 
-<p class=MsoNormal><span lang=EN-US>with Mingming Chen, Liancheng Gong, Xiaoyan
+<p class=MsoNormal><span lang=EN-US>with Xiaoyan Tang, Kris Chen compete in <a href ="https://www.comap.com/undergraduate/contests/mcm/"> The Mathematical Contest in Modeling</a></span></p>
+
+<p class=Text><span lang=EN-US>In order to incorporate the fluctuations of the
+environment into our model, we design the Environment Fungi Coefficient Abstraction
+(EFCA) to quantify the impact of PH, temperature, moisture and light intensity
+to the fungus communities. We set up the environment index to precisely
+determine the growth rate, death rate and decomposition rate of the specific
+fungus community. Based on biological knowledge and mathematical principles, we
+justify the functions we choose for the three rates are suitable through data
+fitting and error testing using MATLAB tool packages.</span></p>
+
+<p class=Text align=center style='text-align:center'><span lang=EN-US><img
+border=0 width=533 height=199 id=fungi.jpg src="index_files/image006.jpg"></span></p>
+
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Two different kinds of fungi
+compete to survive.</span></p>
+
+<p align=center style='text-align:center'>
+<video width="533" height="380" controls loop>
+  <source src="index_files/decompose.mp4" type="video/mp4">
+</video>
+</p>
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Simulated processs for decomposition.</span></p>
+
+<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
+page:</span></b><span lang=EN-US> <a href="https://github.com/Eleven7825/fungi">Eleven7825/fungi:
+2021 mcm a </a></span></p>
+
+<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report:</span></b><span
+lang=EN-US> <a href="./pdfs/2112048.pdf"> here</a></span></p>
+
+<h2><b><span lang=EN-US style='color:black'>A Model to Predict the Maximum Car
+Speed in the Rain</span></b></h2>
+</div>
+
+<p class=MsoNormal><span lang=EN-US>Final project of INTRO TO MATH MODELING with Mingming Chen, Liancheng Gong, Xiaoyan
 Tang, Shuhan Yuan</span></p>
 
 <p class=Text><span lang=EN-US>The speed that a car can maintain on rainy days
