--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ ul
 
 </head>
 
-<body bgcolor="#EAE5EB" lang=ZH-CN link="#005FCE" vlink="#666699"
+<body bgcolor="#F1F1F1" lang=ZH-CN link="#005FCE" vlink="#666699"
 style='word-wrap:break-word'>
 
 <div class=WordSection1>
