add autoplay to the videos

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@ width=800 height=163 id="Picture 12" src="index_files/heading.jpg"></span></p>
 <p class=Text align=center style='text-align:center'>
 	<span lang=EN-US>
 
-<video width = 300 height=300 controls loop>
+<video width = 300 height=300 controls autoplay loop>
 	<source src="index_files/8.mp4" type="video/mp4">
 </video>
 
-<video width = 300 height=300 controls loop>
+<video width = 300 height=300 controls autoplay loop>
 	<source src="index_files/k_const.mp4" type="video/mp4">
 </video>
 
@@ -178,9 +178,9 @@ which is a two-dimensional object, we explore the 2d square frame set up. For
 
 <p class=Text align=center style='text-align:center;page-break-after:avoid'><span
 lang=EN-US>&nbsp; 
-<video width="400" height="297" controls loop>
+<video width="400" height="297" controls autoplay loop>
   <source src="index_files/Dr_5e-02_q0_1e-08.mp4" type="video/mp4">
-</video>&nbsp;&nbsp;&nbsp;<video width="250" height="297" controls loop>
+</video>&nbsp;&nbsp;&nbsp;<video width="250" height="297" controls autoplay loop>
   <source src="index_files/Dr_1e-01_q0_1e-07_scaled.mp4" type="video/mp4">
 </video></span></p>
 
@@ -188,7 +188,7 @@ lang=EN-US>&nbsp;
 charges form in a 2d frame(left) 3d simulation result with a spherical frame(right).&nbsp; </span></p>
 
 <p align=center style='text-align:center'>
-<video width="640" height="480" controls loop>
+<video width="640" height="480" controls autoplay loop>
   <source src="index_files/Dr_0.1_rotate.mp4" type="video/mp4">
 </video>
 </p>
@@ -241,7 +241,7 @@ about the capacity of the grid system.</span></p>
 	<span lang=EN-US><img
 width=307 height=229 id="figure_0.png" src="index_files/image002.gif">&nbsp;&nbsp;
 <img width=317 height=229 id="figure_5.png" src="index_files/image003.gif">
-<video width = 307 height=229 controls loop>
+<video width = 307 height=229 controls autoplay loop>
 	<source src="index_files/rate=0.300000.mp4" type="video/mp4">
 </video>
 </span>
@@ -329,7 +329,7 @@ border=0 width=533 height=199 id=fungi.jpg src="index_files/image006.jpg"></span
 compete to survive.</span></p>
 
 <p align=center style='text-align:center'>
-<video width="533" height="380" controls loop>
+<video width="533" height="380" controls autoplay loop>
   <source src="index_files/decompose.mp4" type="video/mp4">
 </video>
 </p>
